fix .popular-topics z-index bug

--- a/src/static/example_bootstrap.less
+++ b/src/static/example_bootstrap.less
@@ -451,6 +451,7 @@ label.checkbox {
   }
   .popular-topics {
     position: relative;
+    z-index: 2;
     .well {
       background: @white;
       .box-shadow(0 2px 5px rgba(0,0,0,0.5));
